# Deb2Arch

./: .gitignore  README.md  pyproject.toml
src/deb2arch/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  models.py
src/deb2arch/core/: __init__.py  builder.py  converter.py  extractor.py  parser.py
src/deb2arch/prompts/: __init__.py
src/deb2arch/sources/: __init__.py  base.py  local.py  url.py
src/deb2arch/utils/: __init__.py  download.py
tests/: conftest.py  test_builder.py  test_cli.py  test_extractor.py  test_integration.py  test_mapper.py  test_models.py  test_parser.py  test_sources.py
