[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deb2arch"
version = "0.1.0"
description = "Convert Debian packages to Arch Linux packages"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Amit" },
]
keywords = ["debian", "arch", "linux", "package", "converter", "deb", "pacman"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Software Distribution",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "httpx>=0.25",
    "python-debian>=0.1.49",
    "arpy>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "mypy",
    "ruff",
]

[project.scripts]
deb2arch = "deb2arch.cli:main"

[project.urls]
Homepage = "https://github.com/amit/deb2arch"
Repository = "https://github.com/amit/deb2arch"

[tool.hatch.build.targets.wheel]
packages = ["src/deb2arch"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
